--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --forceExit",
     "test:product:routes": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --testPathPatterns=src/tests/routes/productRoutes.test.js --forceExit",
     "test:product:services": "node --experimental-vm-modules node_modules/jest/bin/jest.js --detectOpenHandles --verbose --testPathPatterns=src/tests/services/productServices.test.js",
+    "test:permission:routes": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --testPathPatterns=src/tests/routes/permissionRoutes.test.js --forceExit",
+    "test:permission:services": "node --experimental-vm-modules node_modules/jest/bin/jest.js --detectOpenHandles --verbose --testPathPatterns=src/tests/services/permissionServices.test.js",
+    "test:userpermission:routes": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --testPathPatterns=src/tests/routes/userPermissionRoutes.test.js --forceExit",
+    "test:userpermission:services": "node --experimental-vm-modules node_modules/jest/bin/jest.js --detectOpenHandles --verbose --testPathPatterns=src/tests/services/userPermissionServices.test.js",
+    "test:user:routes": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --testPathPatterns=src/tests/routes/userRoutes.test.js --forceExit",
+    "test:user:services": "node --experimental-vm-modules node_modules/jest/bin/jest.js --detectOpenHandles --verbose --testPathPatterns=src/tests/services/userServices.test.js",
     "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --detectOpenHandles --coverage",
     "db:up": "docker compose up -d && sleep 2 && npx knex migrate:latest",
     "db:down": "docker compose down",
