--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "test:userpermission:services": "node --experimental-vm-modules node_modules/jest/bin/jest.js --detectOpenHandles --verbose --testPathPatterns=src/tests/services/userPermissionServices.test.js",
     "test:user:routes": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --testPathPatterns=src/tests/routes/userRoutes.test.js --forceExit",
     "test:user:services": "node --experimental-vm-modules node_modules/jest/bin/jest.js --detectOpenHandles --verbose --testPathPatterns=src/tests/services/userServices.test.js",
+    "test:purchase:routes": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --testPathPatterns=src/tests/routes/purchaseRoutes.test.js --forceExit",
+    "test:purchase:services": "node --experimental-vm-modules node_modules/jest/bin/jest.js --detectOpenHandles --verbose --testPathPatterns=src/tests/services/purchaseServices.test.js",
     "db:up": "docker compose up -d && sleep 2 && npx knex migrate:latest && npx knex seed:run",
     "db:down": "docker compose down",
     "db:seed": "npx knex seed:run"
